demo/traefik-v2/canary/k8s/04-tls/ingressroute-tls.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-http
  namespace: webapp  
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp
  namespace: webapp
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`webapp.manuelzapf.io`)
      kind: Rule
      middlewares:
        - name: redirect-http
      services:
      - name: webapp-v1
        port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp-tls
  namespace: webapp
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`webapp.manuelzapf.io`)
      kind: Rule
      services:
      - name: webapp-v1
        port: 80
  tls:
   certResolver: default
